--- a/lectures/14/espresso-BasicSample/build.gradle
+++ b/lectures/14/espresso-BasicSample/build.gradle
@@ -7,8 +7,8 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:8.2.1"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.20"
+        classpath 'com.android.tools.build:gradle:8.7.3'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:2.0.21"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
